<resources>
    <string name="app_name">Your Way</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="facebook_app_id">701654833891571</string>
    <string name="fb_login_protocol_scheme">fb701654833891571</string>
    <string name="title_activity_maps">Map</string>
    <string name="profile">Profile</string>
    <string name="lbl_image">Image</string>
    <string name="str_no_data">Could not find any saved favorite places</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="save_landmark">Save landmark</string>
    <string name="caluclate_distance">Caluclate distance</string>
    <string name="show_route">Show route</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="forgot_password_msg">We just need your registered email address to send you password reset instructions.</string>
    <string name="forgot_password"> Forgot Password?</string>
    <string name="todo">TODO</string>
    <string name="favorite_places">Favorite Places</string>
    <string name="share_location">Share My Location</string>
    <string name="refresh">Refresh</string>
    <string name="error_password_match">Password Does Not Matches</string>

    <string name="str_confirm_password">Confirm Password</string>
    <!--for facebook login-->

    <!--facebook login ends-->

    <!--error messages-->

</resources>
